// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`invoke - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Deploy, evaluate, fine-tune, and manage Foundry agents end-to-end: Docker build, ACR push, hosted/prompt agent create, batch eval, prompt optimization, prompt optimizer, agent.yaml, dataset curation from traces, model fine-tuning (SFT/DPO/RFT). USE FOR: deploy agent, hosted agent, create agent, invoke agent, evaluate agent, batch eval, optimize prompt, improve prompt, prompt optimizer, improve agent instructions, optimize system prompt, deploy model, Foundry project, RBAC, role assignment, permissions, quota, capacity, region, availability, troubleshoot agent, deployment failure, create Foundry resource, provision resource, Cognitive Services, AI Services, customize deployment, fine-tune, SFT, DPO, RFT, training data, grader, distillation, custom model, training job, large file upload. DO NOT USE FOR: Azure Functions, App Service, general Azure deploy (use azure-deploy), general Azure prep (use azure-prepare).",
  "extractedKeywords": [
    "agent",
    "agents",
    "ai",
    "assignment",
    "availability",
    "azure",
    "azure-deploy",
    "azure-prepare",
    "batch",
    "build",
    "capacity",
    "cli",
    "cognitive",
    "container",
    "create",
    "curation",
    "custom",
    "customize",
    "data",
    "dataset",
    "deploy",
    "deployment",
    "distillation",
    "docker",
    "end-to-end",
    "eval",
    "evaluate",
    "failure",
    "file",
    "fine-tune",
    "fine-tuning",
    "foundry",
    "from",
    "functions",
    "general",
    "grader",
    "hosted",
    "improve",
    "instructions",
    "invoke",
    "large",
    "manage",
    "mcp",
    "microsoft",
    "model",
    "monitor",
    "optimization",
    "optimize",
    "optimizer",
    "permissions",
    "prep",
    "project",
    "prompt",
    "provision",
    "push",
    "quota",
    "rbac",
    "region",
    "resource",
    "role",
    "service",
    "services",
    "system",
    "traces",
    "training",
    "troubleshoot",
    "upload",
    "validation",
    "yaml",
  ],
  "name": "microsoft-foundry",
}
`;

exports[`invoke - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "ai",
  "assignment",
  "availability",
  "azure",
  "azure-deploy",
  "azure-prepare",
  "batch",
  "build",
  "capacity",
  "cli",
  "cognitive",
  "container",
  "create",
  "curation",
  "custom",
  "customize",
  "data",
  "dataset",
  "deploy",
  "deployment",
  "distillation",
  "docker",
  "end-to-end",
  "eval",
  "evaluate",
  "failure",
  "file",
  "fine-tune",
  "fine-tuning",
  "foundry",
  "from",
  "functions",
  "general",
  "grader",
  "hosted",
  "improve",
  "instructions",
  "invoke",
  "large",
  "manage",
  "mcp",
  "microsoft",
  "model",
  "monitor",
  "optimization",
  "optimize",
  "optimizer",
  "permissions",
  "prep",
  "project",
  "prompt",
  "provision",
  "push",
  "quota",
  "rbac",
  "region",
  "resource",
  "role",
  "service",
  "services",
  "system",
  "traces",
  "training",
  "troubleshoot",
  "upload",
  "validation",
  "yaml",
]
`;
